Fixed small layout bugs in main.html

--- a/css/dev.css
+++ b/css/dev.css
@@ -77,7 +77,7 @@ div.cl-md-6.logo img {
 #track {
    background-color: #f5db33;
    color: #231f20;
-   padding: 0px 70px 3px 20px;
+   padding: 1px 70px 3px 20px;
 }
 
 #latest-news {
@@ -96,7 +96,7 @@ div.cl-md-6.logo img {
 #latest {
    background-color: #f5db33;
    color: #231f20;
-   padding: 0px 50px 5px 20px;
+   padding: 1px 50px 6px 20px;
    font-size: 31px;
    margin-top: 0px !important;
 }
